--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -10,5 +10,8 @@
   "up-coming-events": "Upcoming Events",
   "no-up-coming-events": "No upcoming events",
   "appointment": "appointment",
-  "event": "event"
+  "event": "event",
+  "meet-now": "Meet Now",
+  "view-details": "View Details",
+  "save": "Save"
 }
