--- a/src/translation/vi.json
+++ b/src/translation/vi.json
@@ -8,5 +8,10 @@
   "back": "trở lại",
   "view-all": "xem tất cả",
   "up-coming-events": "Sự kiện sắp diễn ra",
-  "no-up-coming-events": "Không có sự kiện sắp diễn ra"
+  "no-up-coming-events": "Không có sự kiện sắp diễn ra",
+  "appointment": "cuộc hẹn",
+  "event": "sự kiện",
+  "meet-now": "Họp ngay",
+  "view-details": "Xem chi tiết",
+  "save": "Lưu"
 }
